// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunitiesList matches last snapshot with 1 community 1`] = `
<CommunityRow
  communities={
    Array [
      Object {
        "id": 1,
        "name": "One",
        "slug": "one",
      },
    ]
  }
  key="1"
/>
`;

exports[`CommunitiesList matches last snapshot with 2 communities 1`] = `
<CommunityRow
  communities={
    Array [
      Object {
        "id": 1,
        "name": "One",
        "slug": "one",
      },
      Object {
        "id": 2,
        "name": "Two",
        "slug": "two",
      },
    ]
  }
  key="1"
/>
`;

exports[`CommunitiesList matches last snapshot with 5 community 1`] = `
Array [
  <CommunityRow
    communities={
      Array [
        Object {
          "id": 1,
          "name": "One",
          "slug": "one",
        },
        Object {
          "id": 2,
          "name": "Two",
          "slug": "two",
        },
      ]
    }
    key="1"
  />,
  <CommunityRow
    communities={
      Array [
        Object {
          "id": 3,
          "name": "Three",
          "slug": "three",
        },
        Object {
          "id": 4,
          "name": "Four",
          "slug": "four",
        },
      ]
    }
    key="3"
  />,
  <CommunityRow
    communities={
      Array [
        Object {
          "id": 5,
          "name": "Five",
          "slug": "five",
        },
      ]
    }
    key="5"
  />,
]
`;

exports[`CommunityCell matches last snapshot with 1 community 1`] = `
<Fragment>
  <Link
    data-stylename="communityCell"
    to="/all"
  >
    <div
      data-stylename="communityCellAvatar"
      style={
        Object {
          "backgroundImage": "url(https://d3ngex8q79bk55.cloudfront.net/misc/default_community_avatar.png)",
        }
      }
    />
    <span
      data-stylename="communityCellName"
    />
  </Link>
</Fragment>
`;

exports[`CommunityRow matches last snapshot with 1 community 1`] = `
<div
  data-stylename="communityRow"
>
  <CommunityCell
    community={
      Object {
        "id": 1,
        "name": "One",
        "slug": "one",
      }
    }
    key="1"
  />
  <CommunityCell
    community={
      Object {
        "id": 2,
        "name": "Two",
        "slug": "two",
      }
    }
    key="2"
  />
</div>
`;
